# tenshistep-themes

./: .gitignore  CHANGELOG.md  LICENSE  README.md
demo/: README.md
packaging/: PKGBUILD  org.tenshistep.desktop.metainfo.xml
qstyle-preview/: CMakeLists.txt  README.md  main.cpp  render.sh
tenshistep-cursors/TenshiSTEP-IRIX/: index.theme
tenshistep-cursors/tools/: gen_cursors.py  sync-bundles.sh
tenshistep-darkmode/: README.md  install.sh
tenshistep-darkmode/color-schemes/: TenshiSTEP-darkmode.colors
tenshistep-darkmode/konsole/: TenshiSTEP-darkmode.colorscheme  TenshiSTEP-darkmode.profile
tenshistep-darkmode/kvantum/: install-kvantum.sh
tenshistep-darkmode/lockscreen/: LockScreenUi.qml
tenshistep-darkmode/plymouth/: install-plymouth.sh
tenshistep-darkmode/qstyle/: CMakeLists.txt  README.md  build-and-install.sh  tenshistep.json  tenshistepstyle.cpp  tenshistepstyle.h  tenshistepstyleplugin.cpp
tenshistep-darkmode/qt-style/: TenshiSTEP-darkmode.qss
tenshistep-darkmode/sddm/: install-sddm.sh
tenshistep-darkmode/tools/: colorize.py  gen_kvantum.py  gen_plasma_style.py
tenshistep-plasma/: README.md  install.sh
tenshistep-plasma/applications/: Minecraft.desktop  alacritty.desktop  bluejeans.desktop  claws-mail.desktop  com.heroicgameslauncher.hgl.desktop  com.obsproject.Studio.desktop  com.spotify.Client.desktop  cool-retro-term.desktop  discord.desktop  foot.desktop  gimp.desktop  gmail.desktop  google-calendar.desktop  google-maps.desktop  google-meet.desktop  google.desktop  iceweasel.desktop  kitty.desktop  mongodb-compass.desktop  net.86box.86Box.desktop  net.lutris.Lutris.desktop  net.supertuxkart.SuperTuxKart.desktop  obsidian.desktop  (+33 more)
tenshistep-refind/: README.md  install-refind.sh
tenshistep-zirconium/: README.md  install.sh
(+158 files in other folders)
